--- a/style.css
+++ b/style.css
@@ -9,37 +9,17 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    max-width: 60%;
-    opacity: 1;
-    position: relative;
-    top: 0px;
-    left: 0px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
-  .btn {
-    padding: 15px 32px;
-    color: rgb(246, 248, 248);
-    background-color: rgb(74, 149, 155);
-    border: none;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
-    border-radius: 10px;
+  .main-img{
+    width: 250px;
+
   }
-  .btn:active {
-    background-color: rgb(98, 177, 181);
-  }
-  .home-button {
-    margin-left: 120px;
-    margin-top: 120px;
-  }
-  .main-img {
-    display: ruby-base-container;
-    margin: 40 45 44 44 auto;
-    margin-left: 4%;
-    width: 320px;
+  .home-button .btn{
+    border: 0;
   }
   .desktop{
     height: 100vh;
@@ -53,7 +33,7 @@
     font-size: 20px;
     font-weight: 500;  
   }
-
+  
 @media screen and (min-width: 490px) {
   .main-border{
     display: none;
@@ -70,7 +50,7 @@
         height: 100vh;
       }
       .btn {
-        padding: 15px 32px;
+        padding: 15px 36px;
         color: rgb(246, 248, 248);
         background-color: rgb(74, 149, 155);
         font-size: 20px;
