--- a/style/menu.css
+++ b/style/menu.css
@@ -96,6 +96,22 @@ section {
   background-color: white;
   position: relative;
 }
+.btn{
+  margin: 50px 0px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+.btn a{
+  background-color: #43969c;
+  color: white;
+  padding: 16px 120px;
+  font-size: 20px;
+  border-radius: 10px;
+}
+.btn a:hover{
+  filter: brightness(120%);
+}
 @media screen and (min-width: 1200px) {
   #menu {
     display: none;
