--- a/style/editPage.css
+++ b/style/editPage.css
@@ -16,6 +16,10 @@ section{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 80px 0px;
+    background-image: url("../img/Group 6.png");
+    max-width: 100%;
+    height: 100vh;
 }
 .btn{
     margin: 50px 0px;
