--- a/style/menu.css
+++ b/style/menu.css
@@ -39,8 +39,11 @@ section {
   text-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
 }
 .select input {
+  justify-content: center;
+  align-items: center;
+  display: flex;
   border: 0;
-  padding: 15px 120px;
+  padding: 10px 110px;
   background-color: #43969c;
   color: white;
   font-size: 20px;
@@ -49,6 +52,9 @@ section {
   transition: 0.5s;
 }
 .guest input {
+  width: 100%;
+}
+.owner input {
   width: 100%;
 }
 .select input:hover {
