--- a/style/optionsVisitor.css
+++ b/style/optionsVisitor.css
@@ -1,107 +1,124 @@
-  * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: "Tajawal";
-  }
-  body{
-    background-image: url("/img/background-bottom.svg");
-    background-repeat: no-repeat;
-    background-position: bottom;
-    background-size: contain;
-  }
-  section{
-    overflow-x: hidden;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    padding-bottom: 150px;
-
-  }
-  .img{
-    margin-bottom: 80px;
-  }
-  .title{
-    margin-bottom: 60px;
-    font-size: 30px;
-    color: #43969C;
-    text-shadow: 0px 2px 8px black;
-  }
-a{
-    text-decoration: none;
-  }
-  .v1{
-    background-color: #43969C;
-    padding: 16px 0;
-    width: 250px;
-    text-align: center;
-    border-radius: 5px;
-    color: white;
-    font-size: 20px;
-  }
-  .v1:hover{
-    filter: brightness(110%);
-  }
-  .option-two{
-    margin-top: 60px;
-  }
-  .option{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-  }
-.option-one{
-    margin-top: 30px;
-    display: flex;
-    align-items: center;
+html{
+  scroll-behavior: smooth;
 }
-.i{
-    transform: scaleX(-1);
-    -moz-transform: scaleX(-1);
-    -webkit-transform: scaleX(-1);
-    -ms-transform: scaleX(-1);
-    filter: drop-shadow(1px 1px 1px #43969C);
-    filter: invert(54%) sepia(29%) saturate(668%) hue-rotate(135deg) brightness(92%) contrast(92%);
-    position: relative;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Tajawal";
 }
-#tooltip-text{
-    position: absolute;
-    left: 41%;
-    top: 400px;
-    transform: translateX(-92%);
-    background-color: #43969C;
-    color: white;
-    padding: 20px 90px;
-    border-radius: 6px;
-    visibility: hidden;
-    opacity: 0;
-    z-index: 1;
+body {
+  background-image: url("/img/background-bottom.svg");
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: contain;
 }
-.down{
-    top: 200px;
+section {
+  overflow-x: hidden;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  padding-bottom: 150px;
 }
-#tooltip-text::before{
-    content: "";
-    position: absolute;
-    left: 50%;
-    top:100%;
-    transform: translate(-50%);
-    border: 15px solid;
-    border-color: #43969C #0000 #0000 #0000;
-}.tooltip:hover #tooltip-text{
-    top: -120%;
-    visibility: visible;
-    opacity: 1;
-
+.img {
+  margin-bottom: 80px;
+}
+.title {
+  margin-bottom: 60px;
+  font-size: 30px;
+  color: #43969c;
+  text-shadow: 0px 2px 8px black;
+}
+a {
+  text-decoration: none;
+}
+.v1 {
+  background-color: #43969c;
+  padding: 16px 0;
+  width: 250px;
+  text-align: center;
+  border-radius: 5px;
+  color: white;
+  font-size: 20px;
+  border-top-left-radius: 50px;
+  border-top-right-radius: 50px;
+  border-bottom-left-radius: 50px;
+  border-bottom-right-radius: 50px;
+}
+.v1:hover {
+  filter: brightness(110%);
+}
+.option-two {
+  margin-top: 60px;
+}
+.option {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+.option-one {
+  margin-top: 30px;
+  display: flex;
+  align-items: center;
+}
+.i {
+  transform: scaleX(-1);
+  -moz-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  -ms-transform: scaleX(-1);
+  filter: drop-shadow(1px 1px 1px #43969c);
+  filter: invert(54%) sepia(29%) saturate(668%) hue-rotate(135deg)
+    brightness(92%) contrast(92%);
+}
+.tooltip-text {
+  position: absolute;
+  left: 44.5%;
+  top: 520px;
+  transform: translateX(-92%);
+  background-color: #43969c;
+  color: white;
+  padding: 20px 40px;
+  border-radius: 6px;
+  visibility: hidden;
+  opacity: 0;
+  z-index: 1;
+}
+.tooltip-text::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 100%;
+  transform: translate(-50%);
+  border: 15px solid;
+  border-color: #43969c #0000 #0000 #0000;
+}
+.tooltip:hover .tooltip-text {
+  top: 30%;
+  visibility: visible;
+  opacity: 1;
+  transition: all 0.3s ease-in-out;
+}
+.tooltip-text div{
+  text-align: center;
+}
+.top{
+  padding-bottom: 10px;
+  font-weight: bold;
+}
+.tooltip:hover .down {
+  top: 43.5%;
+  visibility: visible;
+  opacity: 1;
+  transition: all 0.3s ease-in-out;
 }
 @media screen and (min-width: 490px) {
-    body{
-      display: none;
-    }
+  body {
+    display: none;
   }
+}
